extension list styling

--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
       </section>
       <div id="extensions-list">
         <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
+
         <div class="extension">
-          <div>
+          <div class="extension__details">
             <img src="./assets/images/logo-devlens.svg" alt="" />
-            <div class="extension-text">
-              <h2>Devlens</h2>
-              <p>
+            <div class="extension__text">
+              <h2 class="extension__name">Devlens</h2>
+              <p class="extension__description">
                 Quickly inspect page layouts and visualize element boundaries.
               </p>
             </div>
@@ -121,6 +122,39 @@
           <div class="buttons">
             <button class="remove-btn">Remove</button>
             <div class="toggle-btn active"></div>
+          </div>
+        </div>
+        <div class="extension">
+          <div class="extension__details">
+            <img src="./assets/images/logo-devlens.svg" alt="" />
+            <div class="extension__text">
+              <h2 class="extension__name">Devlens</h2>
+              <p class="extension__description">
+                Quickly inspect page layouts and visualize element boundaries.
+              </p>
+            </div>
+          </div>
+          <div class="buttons">
+            <button class="remove-btn">Remove</button>
+            <div class="toggle-btn active"></div>
+          </div>
+        </div>
+        <div class="extension">
+          <div class="extension__details">
+            <img src="./assets/images/logo-devlens.svg" alt="" />
+            <div class="extension__text">
+              <h2 class="extension__name">Devlens</h2>
+              <p class="extension__description">
+                Quickly inspect page layouts and visualize element boundaries.
+              </p>
+            </div>
+          </div>
+          <div class="buttons">
+            <button class="remove-btn">Remove</button>
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider round"></span>
+            </label>
           </div>
         </div>
       </div>
