--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div id="extensions-list">
         <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
 
-        <div class="extension">
+        <!-- <div class="extension">
           <div class="extension__details">
             <img src="./assets/images/logo-devlens.svg" alt="" />
             <div class="extension__text">
@@ -126,7 +126,7 @@
               <span class="slider round"></span>
             </label>
           </div>
-        </div>
+        </div>-->
       </div>
     </main>
 
