light theme styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Browser extensions manager UI</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body class="light-bg">
+  <body>
     <header>
       <div id="logo">
         <svg
