theme toggle button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       </div>
       <button
         type="button"
+        data-theme-toggle
         id="theme-switcher"
         aria-label="Change light theme to dark"
       >
